Nav component done

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,10 @@
   font-style: normal;
 }
 
+:root {
+  --primary-color: #9d50f6;
+}
+
 *,
 *::before,
 *::after {
@@ -36,3 +40,6 @@
 body {
   font-family: Scandia, sans-serif;
 }
+
+// Contact Page
+@import "./styles/contact";
