--- a/src/components/NavLink/index.module.css
+++ b/src/components/NavLink/index.module.css
@@ -6,7 +6,6 @@
   font-size: 0.75em;
   position: relative;
 }
-
 .link::before {
   content: "";
   position: absolute;
@@ -15,25 +14,15 @@
   left: 0;
   height: 2px;
   background-color: var(--color);
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
+  transform: scaleX(0);
+  transform-origin: right;
   transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
 }
-
 .link:hover::before {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  -webkit-transform-origin: left;
-          transform-origin: left;
+  transform: scaleX(1);
+  transform-origin: left;
 }
-
 .link.active {
   font-weight: 700;
   --color: var(--primary-color);
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
