--- a/src/pages/Contact/index.module.scss
+++ b/src/pages/Contact/index.module.scss
@@ -1,47 +1,62 @@
 @import "../../sass/abstracts/abstract";
-.contact{
-    background-image: url(../../assets/Pattern/RadialCircle.svg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    @for $i from 1 to 6 {
-        .ellipse-#{$i}{
-            position: absolute; 
-            top: 50% ;
-            @include y-effect($i);
-            @include x-effect($i);
-        }
-        }
-
-    .content{
-        position: relative;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        justify-content: space-evenly;
-
-        .illustrations{
-            display: flex;
-            width: 60%;
-            justify-content: space-between;
-            align-items: center;
-            margin-inline: auto;
-        }
-            .details{
-                width: 60%;
-                margin-inline: auto;
-                font-size: large;
-                font-weight: 400;
-                line-height: 30px;
-                letter-spacing: 1px;
-                a{
-                    text-decoration-color: $Link;
-                    color: $Link;
-                }
-            }
-            
+.contact {
+  background-image: url(../../assets/Pattern/RadialCircle.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  @for $i from 1 to 6 {
+    .ellipse-#{$i} {
+      position: absolute;
+      top: 50%;
+      width: 15px;
+      @include y-effect($i);
+      @include x-effect($i);
     }
+  }
+
+  .content {
+    position: relative;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: space-evenly;
+    padding: 25px;
+
+    .illustrations {
+      display: flex;
+      gap: 100px;
+      justify-content: center;
+      align-items: center;
+      margin-inline: auto;
+      width: 100%;
+
+      svg {
+        max-width: 200px;
+      }
+
+      .logo {
+        max-width: 100px;
+      }
+    }
+    .details {
+      max-width: 530px;
+      margin-inline: auto;
+      font-weight: 400;
+      line-height: 1.5em;
+      color: #4c4c4c;
+      a {
+        text-decoration: underline;
+        text-decoration-color: $Link;
+        color: $Link;
+      }
+    }
+  }
+}
+
+@media screen and(max-width:650px) {
+  .contact .content .illustrations {
+    gap: 50px;
+  }
 }
