--- a/src/pages/Contact/index.module.scss
+++ b/src/pages/Contact/index.module.scss
@@ -23,6 +23,7 @@
     height: 100%;
     justify-content: space-evenly;
     padding: 25px;
+    overflow: hidden;
 
     .illustrations {
       display: flex;
@@ -52,11 +53,28 @@
         color: $Link;
       }
     }
+
+    .watermark {
+      position: absolute;
+      color: #f7f7f7;
+      font-weight: 700;
+      font-size: 90px;
+      bottom: 10px;
+      right: -40px;
+      line-height: 1em;
+      z-index: -1;
+      width: max-content;
+    }
   }
 }
 
 @media screen and(max-width:650px) {
   .contact .content .illustrations {
     gap: 50px;
+  }
+
+  .contact .content .watermark {
+    right: unset;
+    left: 0;
   }
 }
