--- a/src/pages/Contact/index.module.css
+++ b/src/pages/Contact/index.module.css
@@ -5,8 +5,7 @@
 *,
 ::before,
 ::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   border-width: 0;
   /* 2 */
@@ -189,9 +188,9 @@ select {
 2. Remove default button styles.
 */
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -233,7 +232,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
-[type='search'] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -312,32 +311,14 @@ textarea {
 1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
+input::-moz-placeholder, textarea::-moz-placeholder {
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
+}
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
-input:-ms-input-placeholder,
-textarea:-ms-input-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
-input::-ms-input-placeholder,
-textarea::-ms-input-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -356,7 +337,7 @@ textarea::placeholder {
 Set the default cursor for buttons.
 */
 button,
-[role="button"] {
+[role=button] {
   cursor: pointer;
 }
 
@@ -401,91 +382,66 @@ video {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 .contact .ellipse-1 {
   position: absolute;
   top: 50%;
   width: 15px;
   margin-top: -5%;
-  margin-left: 20%;
+  margin-left: 16;
 }
-
 .contact .ellipse-2 {
   position: absolute;
   top: 50%;
   width: 15px;
   margin-top: 10%;
-  margin-left: -10%;
+  margin-left: -21;
 }
-
 .contact .ellipse-3 {
   position: absolute;
   top: 50%;
   width: 15px;
   margin-top: -15%;
-  margin-left: 10%;
+  margin-left: 24;
 }
-
 .contact .ellipse-4 {
   position: absolute;
   top: 50%;
   width: 15px;
   margin-top: 20%;
-  margin-left: -20%;
+  margin-left: -25;
 }
-
 .contact .ellipse-5 {
   position: absolute;
   top: 50%;
   width: 15px;
   margin-top: -25%;
-  margin-left: 0%;
+  margin-left: 24;
 }
-
 .contact .content {
   position: relative;
   min-height: 90vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  justify-content: space-evenly;
   padding: 25px;
   overflow: hidden;
 }
-
 .contact .content .illustrations {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 100px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin-inline: auto;
   width: 100%;
 }
-
 .contact .content .illustrations svg {
   max-width: 200px;
 }
-
 .contact .content .illustrations .logo {
   max-width: 100px;
 }
-
 .contact .content .details {
   max-width: 530px;
   margin-inline: auto;
@@ -493,14 +449,12 @@ video {
   line-height: 1.5em;
   color: #4c4c4c;
 }
-
 .contact .content .details a {
   text-decoration: underline;
   -webkit-text-decoration-color: #3D3DFF;
           text-decoration-color: #3D3DFF;
   color: #3D3DFF;
 }
-
 .contact .content .watermark {
   position: absolute;
   color: #f7f7f7;
@@ -523,5 +477,4 @@ video {
     right: unset;
     left: 0;
   }
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
