--- a/src/sass/abstracts/_mixens.scss
+++ b/src/sass/abstracts/_mixens.scss
@@ -1,3 +1,18 @@
+@function pow($number, $exponent) {
+  $value: 1;
+
+  @if $exponent > 0 {
+    @for $i from 1 through $exponent {
+      $value: $value * $number;
+    }
+  } @else if $exponent < 0 {
+    @for $i from 1 through -$exponent {
+      $value: $value / $number;
+    }
+  }
+
+  @return $value;
+}
  @mixin y-effect($i) {
             @if ($i % 2 == 0){
             margin-top: (5% * $i);
@@ -8,9 +23,9 @@
  }
   @mixin x-effect($i) {
             @if ($i % 2 != 0){
-            margin-left: 5% *  (5 - $i);
+            margin-left:   (pow(5,2) - pow(($i - 4), 2));
          }       
             @else{
-            margin-left: -5% * $i;
+            margin-left:   -(pow(5,2) - pow(($i - 4), 2));
             }
  }
