--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Consolas";
+  src: url("./assets/fonts/Consolas.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
   --primary-color: #9d50f6;
 }
