Terminal component partially done

--- a/src/components/Terminal/index.module.css
+++ b/src/components/Terminal/index.module.css
@@ -1,9 +1,57 @@
 .terminal {
   margin-bottom: 20px;
   font-family: "Consolas", monospace;
+  font-size: 15px;
+  background-color: #1e1e1e;
+  padding: 20px 30px;
+  border-radius: 7px;
 }
 
 .terminal:last-child {
   margin-bottom: 0;
+}
+
+.terminal .head {
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.terminal .head span {
+  color: #d539c3;
+}
+
+.terminal .head span:first-child {
+  color: #00cc00;
+}
+
+.terminal .head span:last-child {
+  color: #e3e524;
+}
+
+.terminal .body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  color: #ebebeb;
+  margin-top: 5px;
+}
+
+.terminal .body span:first-child {
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.terminal .body span:last-child {
+  width: 100%;
 }
 /*# sourceMappingURL=index.module.css.map */
