--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: "Consolas";
-  src: url("./assets/fonts/Consolas.ttf") format("truetype");
+  src: url("./assets/fonts/CONSOLA.TTF") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
