Terminal component done

--- a/src/components/Terminal/index.module.css
+++ b/src/components/Terminal/index.module.css
@@ -1,10 +1,11 @@
 .terminal {
   margin-bottom: 20px;
-  font-family: "Consolas", monospace;
+  font-family: Consolas, monospace;
   font-size: 15px;
   background-color: #1e1e1e;
-  padding: 20px 30px;
+  padding: 20px;
   border-radius: 7px;
+  position: relative;
 }
 
 .terminal:last-child {
@@ -53,5 +54,29 @@
 
 .terminal .body span:last-child {
   width: 100%;
+}
+
+.terminal .absolute {
+  position: absolute;
+  top: 18px;
+  right: 20px;
+  opacity: 0;
+}
+
+.terminal .copied {
+  font-size: 14px;
+  color: #fff;
+  font-weight: 500;
+  font-family: Scandia, sans-serif;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  top: 25px;
+}
+
+.terminal:hover .absolute {
+  opacity: 1;
 }
 /*# sourceMappingURL=index.module.css.map */
