--- a/src/components/CopyIcon/index.module.scss
+++ b/src/components/CopyIcon/index.module.scss
@@ -9,6 +9,9 @@
   border-radius: 4px;
   border: 1px solid var(--gray);
   transition: all 0.3s;
+  position: absolute;
+  top: 18px;
+  right: 20px;
 
   &:hover {
     --gray: #fff;
