--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -11,4 +11,10 @@
   padding: 45px 100px;
   overflow: auto;
 }
+
+.docs .main main .internal_link {
+  color: #000;
+  text-decoration: underline;
+  font-weight: 700;
+}
 /*# sourceMappingURL=index.module.css.map */
