--- a/src/components/SideNav/index.module.scss
+++ b/src/components/SideNav/index.module.scss
@@ -1,3 +1,10 @@
 .nav {
   border-right: 1px solid #d9d9d9;
+  nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    padding-left: 30px;
+    padding-top: 45px;
+  }
 }
