--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -2,14 +2,12 @@
   border-top: 1px solid #d9d9d9;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 270px 1fr;
-      grid-template-columns: 270px 1fr;
+  -ms-grid-columns: 270px minmax(0, 1fr);
+      grid-template-columns: 270px minmax(0, 1fr);
 }
 
 .docs .main main {
-  height: 85vh;
   padding: 45px 100px;
-  overflow: auto;
 }
 
 .docs .main main .internal_link {
