--- a/src/components/Heading/index.module.css
+++ b/src/components/Heading/index.module.css
@@ -1,27 +1,19 @@
 .heading {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 12px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
-
 .heading a {
   color: var(--primary-color);
   opacity: 0;
   text-decoration: none;
 }
-
 .heading a:hover {
   text-decoration: underline;
 }
-
 .heading:hover a {
   opacity: 1;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
