--- a/src/components/Terminal/index.module.css
+++ b/src/components/Terminal/index.module.css
@@ -7,11 +7,9 @@
   border-radius: 7px;
   position: relative;
 }
-
 .terminal:last-child {
   margin-bottom: 0;
 }
-
 .terminal .head {
   pointer-events: none;
   -webkit-user-select: none;
@@ -19,31 +17,22 @@
       -ms-user-select: none;
           user-select: none;
 }
-
 .terminal .head span {
   color: #d539c3;
 }
-
 .terminal .head span:first-child {
   color: #00cc00;
 }
-
 .terminal .head span:last-child {
   color: #e3e524;
 }
-
 .terminal .body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 10px;
   color: #ebebeb;
   margin-top: 5px;
 }
-
 .terminal .body span:first-child {
   pointer-events: none;
   -webkit-user-select: none;
@@ -51,16 +40,13 @@
       -ms-user-select: none;
           user-select: none;
 }
-
 .terminal .body span:last-child {
   width: 100%;
 }
-
 .terminal .absolute {
   position: absolute;
   opacity: 0;
 }
-
 .terminal .copied {
   font-size: 14px;
   color: #fff;
@@ -74,8 +60,6 @@
   top: 25px;
   right: 20px;
 }
-
 .terminal:hover .absolute {
   opacity: 1;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
