--- a/src/index.css
+++ b/src/index.css
@@ -4,35 +4,30 @@
   font-weight: 300;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Consolas";
   src: url("./assets/fonts/CONSOLA.TTF") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
-
 :root {
   --primary-color: #9d50f6;
 }
@@ -42,11 +37,9 @@
 *::after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   font-family: Scandia, sans-serif;
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
