--- a/src/pages/Docs/index.module.css
+++ b/src/pages/Docs/index.module.css
@@ -1,18 +1,13 @@
 .docs .main {
   border-top: 1px solid #d9d9d9;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 270px minmax(0, 1fr);
-      grid-template-columns: 270px minmax(0, 1fr);
+  grid-template-columns: 270px minmax(0, 1fr);
 }
-
 .docs .main main {
   padding: 45px 100px;
 }
-
 .docs .main main .internal_link {
   color: #000;
   text-decoration: underline;
   font-weight: 700;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
