--- a/src/components/SideNav/index.module.scss
+++ b/src/components/SideNav/index.module.scss
@@ -1,10 +1,43 @@
+@import "../../sass/abstracts/abstract";
+
 .nav {
   border-right: 1px solid #d9d9d9;
   nav {
     position: sticky;
     top: 0;
     left: 0;
+    bottom: 0;
     padding-left: 30px;
     padding-top: 45px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
+    color: $DocText;
+    .header{
+        font-weight: 600;
+        font-size: 18px;
+      }
+      a{
+        padding-left: 20px;
+        transition: color;
+        width: fit-content;
+        transition-duration: 300ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+      }
+      a:hover{
+        color: #9D50F6;
+      }
+      div{
+          display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      }
+.containerRef{
+  height: 50%;
+}
+    .containerDoc{
+      height: 100%;
+    }
   }
 }
