Gone far with main page

--- a/src/pages/Docs/subpages/Main/index.module.css
+++ b/src/pages/Docs/subpages/Main/index.module.css
@@ -1,6 +1,11 @@
-.internal_link {
+.emphasized_link {
   color: #000;
   text-decoration: underline;
   font-weight: 700;
+}
+
+.subtle_link {
+  text-decoration: underline;
+  color: #3d3dff;
 }
 /*# sourceMappingURL=index.module.css.map */
