--- a/src/pages/Docs/subpages/Main/index.module.scss
+++ b/src/pages/Docs/subpages/Main/index.module.scss
@@ -1,5 +1,10 @@
-.internal_link {
+.emphasized_link {
   color: #000;
   text-decoration: underline;
   font-weight: 700;
+}
+
+.subtle_link {
+  text-decoration: underline;
+  color: #3d3dff;
 }
