--- a/src/pages/Docs/subpages/Main/index.module.css
+++ b/src/pages/Docs/subpages/Main/index.module.css
@@ -7,5 +7,4 @@
 .subtle_link {
   text-decoration: underline;
   color: #3d3dff;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
